# typeling

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  justfile  out.ll  out.s  out_unopt.ll  test.tl
examples/: constructor_test.ll  cpp_enum.ll  cpp_unions.cpp  cpp_unions.ll  rust_enums.ll  swift_types.ll  unit_test.ll
examples/calculator/src/: calculator1.rs  calculator2.lalrpop  calculator2.rs  calculator3.rs  calculator4.lalrpop  calculator4.rs  calculator6.rs
examples/kaleidoscope/: kaleidoscope.rs  visitors.rs
src/: ast.rs  calculator.rs  calculator4.lalrpop  calculator6.lalrpop  codegen.rs  compiler.rs  example.tll  example_ws.tll  kaleidoscope.rs  main.rs  sizeof.ll  type_system.rs  typeling.l  typeling.lalrpop  typeling.y  types.rs  visitors.rs
src/calculator/: ast.rs  calculator6.lalrpop
src/kaleidoscope/: ast.rs  kaleidoscope.lalrpop  tokens.rs
src/language/: a.txt  case.tl  case.tll  demo.py  demo.tl  demo.tll  example.tll  gadt.tll  list.tl  out.ll  out_unopt.ll  patmatch.tll  shorthands.tll  temp.y  typecheck.tll  typeling.l  typeling.y  types.tll  variables.tll
src/language/examples/: demo.tl  hello.tl
src/language/grammar/: typeling.l  typeling.y
src/language/llvm-explore/c++/: bintree.cpp
src/language/llvm-explore/haskell/: bintree.hi  bintree.hs  bintree.ll
src/language/llvm-explore/rust/: bintree.rs
src/language/old-files/: case.tll  err  gadt.tll  out_unopt.ll  patmatch.tll  shorthands.tll  typeling_ws.y  types.tll
src/type_system/: gadt.rs  typecheck.rs
src/visitors/: codegen.rs  typecheck.rs
(+1 files in other folders)
